--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-mongo": "^2.0.1",
     "connect-mongodb-session": "^2.0.3",
     "connect-redis": "^3.3.3",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-sanitizer": "^1.0.4",
     "express-session": "^1.15.6",
@@ -24,6 +25,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "session-memory-store": "^0.2.2"
   }
 }
