--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-mongodb-session": "^2.0.3",
     "connect-redis": "^3.3.3",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-sanitizer": "^1.0.4",
     "express-session": "^1.15.6",
